@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.54 2007/04/12 09:50:02 martti Exp $
+# $NetBSD: Makefile,v 1.55 2007/04/18 22:30:02 drochner Exp $
 #
 
 COMMENT=	Clocks, calendars, daily planners and other time related applications
@@ -82,7 +82,6 @@ SUBDIR+=	xcal
 SUBDIR+=	xchrono
 SUBDIR+=	xdaliclock
 SUBDIR+=	xdkcal
-SUBDIR+=	xfce4-calendar
 SUBDIR+=	xfce4-datetime-plugin
 SUBDIR+=	xfce4-orage
 SUBDIR+=	xtimer
