@@ -1,14 +1,0 @@
-# $NetBSD: Makefile,v 1.6 2006/04/17 13:46:12 wiz Exp $
-
-.include "../../meta-pkgs/xfce4/Makefile.common"
-
-DISTNAME=	xfcalendar-${XFCE4_VERSION}
-PKGNAME=	xfce4-calendar-${XFCE4_VERSION}
-#PKGREVISION=	1
-CATEGORIES=	time
-COMMENT=	Xfce calendar
-
-.include "../../databases/dbh/buildlink3.mk"
-.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-.include "../../x11/xfce4-mcs-plugins/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
