@@ -1,56 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2006/04/17 07:07:36 jlam Exp $
-bin/xfcalendar
-lib/xfce4/mcs-plugins/xfcalendar_plugin.la
-share/applications/xfcalendar.desktop
-share/applications/xfce-xfcalendar-settings.desktop
-share/icons/hicolor/48x48/apps/xfcalendar.png
-share/icons/hicolor/scalable/apps/xfcalendar.svg
-share/locale/af/LC_MESSAGES/xfcalendar.mo
-share/locale/ar/LC_MESSAGES/xfcalendar.mo
-share/locale/az/LC_MESSAGES/xfcalendar.mo
-share/locale/be/LC_MESSAGES/xfcalendar.mo
-share/locale/bg/LC_MESSAGES/xfcalendar.mo
-share/locale/bn_IN/LC_MESSAGES/xfcalendar.mo
-share/locale/ca/LC_MESSAGES/xfcalendar.mo
-share/locale/cs/LC_MESSAGES/xfcalendar.mo
-share/locale/da/LC_MESSAGES/xfcalendar.mo
-share/locale/de/LC_MESSAGES/xfcalendar.mo
-share/locale/el/LC_MESSAGES/xfcalendar.mo
-share/locale/en_GB/LC_MESSAGES/xfcalendar.mo
-share/locale/eo/LC_MESSAGES/xfcalendar.mo
-share/locale/es/LC_MESSAGES/xfcalendar.mo
-share/locale/et/LC_MESSAGES/xfcalendar.mo
-share/locale/eu/LC_MESSAGES/xfcalendar.mo
-share/locale/fa/LC_MESSAGES/xfcalendar.mo
-share/locale/fi/LC_MESSAGES/xfcalendar.mo
-share/locale/fr/LC_MESSAGES/xfcalendar.mo
-share/locale/gu/LC_MESSAGES/xfcalendar.mo
-share/locale/he/LC_MESSAGES/xfcalendar.mo
-share/locale/hi/LC_MESSAGES/xfcalendar.mo
-share/locale/hu/LC_MESSAGES/xfcalendar.mo
-share/locale/hy/LC_MESSAGES/xfcalendar.mo
-share/locale/it/LC_MESSAGES/xfcalendar.mo
-share/locale/ja/LC_MESSAGES/xfcalendar.mo
-share/locale/ko/LC_MESSAGES/xfcalendar.mo
-share/locale/ku/LC_MESSAGES/xfcalendar.mo
-share/locale/lt/LC_MESSAGES/xfcalendar.mo
-share/locale/mr/LC_MESSAGES/xfcalendar.mo
-share/locale/ms/LC_MESSAGES/xfcalendar.mo
-share/locale/nb_NO/LC_MESSAGES/xfcalendar.mo
-share/locale/nl/LC_MESSAGES/xfcalendar.mo
-share/locale/pa/LC_MESSAGES/xfcalendar.mo
-share/locale/pl/LC_MESSAGES/xfcalendar.mo
-share/locale/pt_BR/LC_MESSAGES/xfcalendar.mo
-share/locale/pt_PT/LC_MESSAGES/xfcalendar.mo
-share/locale/ro/LC_MESSAGES/xfcalendar.mo
-share/locale/ru/LC_MESSAGES/xfcalendar.mo
-share/locale/sk/LC_MESSAGES/xfcalendar.mo
-share/locale/sl/LC_MESSAGES/xfcalendar.mo
-share/locale/sq/LC_MESSAGES/xfcalendar.mo
-share/locale/sv/LC_MESSAGES/xfcalendar.mo
-share/locale/ta/LC_MESSAGES/xfcalendar.mo
-share/locale/tr/LC_MESSAGES/xfcalendar.mo
-share/locale/uk/LC_MESSAGES/xfcalendar.mo
-share/locale/vi/LC_MESSAGES/xfcalendar.mo
-share/locale/zh_CN/LC_MESSAGES/xfcalendar.mo
-share/locale/zh_TW/LC_MESSAGES/xfcalendar.mo
